# cloud-env-cdk

./: .gitignore  DEVBOX_CONNECTION.md  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
.github/: codebuild.yml
.github/workflows/: codebuild.yml  codepipeline.yml
cli/: README.md  SETUP.md  package-lock.json  package.json  pyproject.toml
cli/.github/workflows/: publish.yml
cli/apsis_sr/: cli.py
cli/apsis_sr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/scripts/: release.sh
cli/src/: cli.ts  postinstall.ts
cli/src/cli/: completionSupport.ts
cli/src/commands/: cloud.ts  cloudParsers.ts  nonCloud.ts  nonCloudParsers.ts
cli/src/core/: awsHelpers.ts  cache.ts  errors.ts  fsUtils.ts  processUtils.ts
cli/tests/: cli-regression.mjs
docker/: Dockerfile  Dockerfile.mvp  buildspec.yml  qnxsdp-env-zsh.sh
docs/: DEPLOYMENT.md  DEVBOX_CONNECTION.md  DEVBOX_LOGS.md  DEVBOX_README.md  IAM_GROUPS.md  SSO_DEPLOYMENT.md  SSO_QUICKREF.md  SSO_SETUP.md  VSCODE_SETUP.md
examples/.devcontainer/: devcontainer.json
lambda/provisioner/: package-lock.json  package.json  provision.js
lambda/snapshot-manager/: index.js  package-lock.json  package.json
legacy/: README.md  deployed-template.json
lib/: cloud-dev-env.ts  dev-container-build-stack.ts  srp-130_aws_infra-stack.ts
lib/constructs/: devbox-api.ts  (+4 more)
scripts/: check-devbox-logs.sh  connect-devbox.sh  devbox-cli.sh  devbox-sso.sh  session-manager-plugin.deb.sig  setup-vscode.sh  test-connection.sh  vscode-config.sh
test/: srp-130_aws_infra.test.ts
